--- a/Frontend/src/components/pages/UiConfigHelper/jsonRenderer.scss
+++ b/Frontend/src/components/pages/UiConfigHelper/jsonRenderer.scss
@@ -1,4 +1,4 @@
-.json-renderer-tree .wd-treenode-root .MuiTypography-root {
+.json-renderer-tree .nbo-treenode-root .MuiTypography-root {
   font-family: Monospace, sans-serif;
 }
 
@@ -6,6 +6,6 @@
   flex: 1;
 }
 
-.wdtree-app {
+.nbotree-app {
   height: 100%;
 }
